# localflow

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  mise.toml  renovate.json5
.claude/rules/: senko-via-mise.md  testing.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: release.yml
.mise/tasks/: check
.senko/: config.toml
docs/: AUTH_SETUP.ja.md  AUTH_SETUP.md  AWS_DEPLOYMENT.md  CLI.ja.md  CLI.md  CONFIGURATION.ja.md  CONFIGURATION.md  DEVELOPMENT.ja.md  DEVELOPMENT.md  README.ja.md  cli-command-structure.md  migration-v0.22.0.md  plan.md
docs/ja/: README.md
docs/knowledge/: layered-architecture-design.md  ureq-v3-api.md
docs/proposals/: file-based-hooks.md
examples/: pg_test_server.rs
src/: api.rs  auth.rs  backend.rs  bootstrap.rs  db.rs  hooks.rs  http_backend.rs  lib.rs  main.rs  models.rs  project.rs  skill_md.txt  watch.rs  web.rs
src/application/: auth.rs  contract_service.rs  hook_test_service.rs  hook_trigger.rs  metadata_field_service.rs  mod.rs  project_service.rs  task_service.rs  user_service.rs
src/domain/: contract.rs  duration.rs  error.rs  metadata_field.rs  mod.rs  project.rs  repository.rs  task.rs  user.rs  validator.rs
src/infra/: auth.rs  mod.rs  pr_verifier.rs  project_root.rs  secrets.rs  xdg.rs
src/presentation/: api.rs  dto.rs  mod.rs  web.rs
tasks.local/: 001-rust-cli.md  002-task-002.md  003-task-003.md  004-add.md  005-list-get.md  006-next.md  007-edit.md  008-complete-cancel.md  009-deps.md  010-task-010.md  011-skill-install.md
tests/e2e/: helpers.sh  run.sh  test_add_variants.sh  test_api_keys.sh  test_assignee_user_id.sh  test_auth_session.sh  test_auth_status_relay.sh  test_auth_token.sh  test_branch.sh  test_config.sh  test_dod.sh  (+52 more)
(+108 files in other folders)
