[package]
name = "senko"
version = "0.32.0"
edition = "2024"

[[bin]]
name = "senko"
path = "src/main.rs"

[features]
aws-secrets = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
postgres = ["dep:sqlx"]

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
chrono = "0.4.44"
axum = "0.8"
axum-extra = { version = "0.12", features = ["query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml = "1.1"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.13"
ammonia = "4"
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
sha2 = "0.11"
subtle = "2"
thiserror = "2"
zeroize = "1"
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "postgres", "tls-rustls"] }
percent-encoding = "2"
oauth2 = "5"
keyring = { version = "3", features = ["linux-native", "apple-native"] }
open = "5"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
postgresql_embedded = { version = "0.20", default-features = false, features = ["rustls", "theseus"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
